# crypto_exchange_server

./: .gitignore  README.md  docker-compose-test.yaml  docker-compose.yaml
deployment/: init.sql
exchange_core/: Dockerfile  bla.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
exchange_core/prisma/: schema.prisma
exchange_core/src/__tests__/: wallet_creation.ts
exchange_core/src/abi/: index.ts
exchange_core/src/abstract/: block.ts  common.ts  const.ts  env.ts  error.ts  execution.ts  filter.ts  mapping.ts  order.ts  pagination.ts  token.ts  transaction.ts  tron.ts  wallet.ts
exchange_core/src/admin_telegram_notifier/: env.ts  index.ts
exchange_core/src/eth_execution_manager/: env.ts  execution_action.ts  index.ts
exchange_core/src/eth_subscriber/: index.ts
exchange_core/src/facade/: chain_sync.ts  comission.ts  env.ts  operation_chain.ts  order.ts  user.ts  (+2 more)
keycloak/: Dockerfile  realm-export.json
price_parser/: pyproject.toml
price_parser/abstract/: chain.py  const.py  exchange.py  instrument.py  token.py  types.py
price_parser/binance_stream_event_handler/: binance_stream_event_handler.py
price_parser/keycloak_provider/: env.py  keycloak_provider.py
price_parser/kv_storage/: env.py  kv_storage.py  message_handler.py
price_parser/pln_price_observer/: const.py  pln_price_observer.py
price_parser/price_parser/: __main__.py
price_parser/wallet_provider/: eth.py
price_parser/wallet_provider_api/: __main__.py  custom_oauth_provider.py  env.py  wallet_facade.py
price_parser/wallet_storage/: env.py  wallet_storage.py
(+91 files in other folders)
